static/code-examples/ibac-for-istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otterize-tutorial-istio
  labels:
    istio-injection: enabled
