static/code-examples/ibac-for-istio/client-other-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-other
  namespace:  otterize-tutorial-istio
spec:
  selector:
    matchLabels:
      app: client-other
  template:
    metadata:
      labels:
        app: client-other
    spec:
      containers:
        - name: client-other
          image: alpine/curl
          command: [ "/bin/sh", "-c", "--" ]
          args: [ "while true; do echo \"Calling server...\"; if ! timeout 2 curl -si server 2>/dev/null; then echo \"curl timed out\"; fi; sleep 2; done" ]
