static/code-examples/ibac-for-istio/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace:  otterize-tutorial-istio
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
