static/code-examples/ibac-for-istio/allow-nothing.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: otterize-visual-tutorial-istio
spec:
  {}
